[package]
name = "pewter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0" }
wgpu = { version="0.14.0" }
tokio = { version="1.21.2", features=["rt","rt-multi-thread"] }